# SysVitals

./: .env  .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  index.html  main.py  monitor.py  render.yaml  requirements.txt  thermalwatch.service  wrangler.jsonc
backend/: .dockerignore  .env.example  Dockerfile  __init__.py  database.py  main.py  models.py  requirements.txt  supabase_cleanup_migration.sql  supabase_schema.sql
data/: thermalwatch.db
deploy/: Caddyfile  sysvitals-backend.service  wsl-native-deploy.sh
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: deployment.md  wsl-docker.md
frontend/: dashboard.html  index.html  login.html
frontend/css/: style.css
frontend/js/: app.js  config.js
monitor/: .env.example  monitor.py  requirements.txt
static/: index.html
