[package]
name = "sysvitals-desktop"
version = "0.1.0"
description = "Standalone SysVitals dashboard"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
url = "2"
